--- a/css/theme.css
+++ b/css/theme.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
 }
+
 h2 {
   font-size: 24px;
   text-transform: uppercase;
@@ -8,9 +9,17 @@ h2 {
   font-weight: 600;
   margin-bottom: 30px;
 }
+
+h3 {
+  color: #000 !important;
+  font-weight: 400;
+  font-size: 40px;
+}
+
 .container-fluid {
   padding: 60px 50px;
 }
+
 .navbar {
   border-bottom: 1px solid rgba(255, 255, 255, .3);
 }
@@ -23,9 +32,13 @@ h2 {
   transition: 750ms ease;
   background-color: transparent !important;
 }
+
 .block-content.about p {
+  font-size: 16px;
   line-height: 30px !important;
+  font-family: 'Quicksand', sans-serif;
 }
+
 .bg-dark.scrolled {
   background-color: #292929 !important;
 }
@@ -46,6 +59,7 @@ h2 {
   color: #fff;
   padding-top: 17%;
 }
+
 .first-about {
   /* image used */
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url('core\ value\ 2.png');
@@ -62,14 +76,34 @@ h2 {
   color: #fff;
   padding-top: 17%;
 }
-.h3_bold{
+
+.first-contact {
+  /* image used */
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url('contact us.jpg');
+  padding-top: 140px;
+  /* height used */
+  min-height: 300px;
+  background-size: cover !important;
+  height: 80vh;
+  /* create parallex scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  padding-top: 17%;
+}
+
+.h3_bold {
   font-weight: bold;
   font-size: 50px;
   font-family: fantasy;
 }
-.h3_bold li{
+
+.h3_bold li {
   font-size: 10px;
 }
+
 .nav-link {
   color: rgba(255, 255, 255, 1) !important;
 }
@@ -85,61 +119,108 @@ h2 {
 .navbar-brand img {
   height: 50px;
 }
+
 .padding {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
-footer{
+
+footer {
   background-color: #292929;
   color: #fff !important;
 }
-.li-link{
+
+.li-link {
   list-style: none;
 }
-.li-link a{
-  color:rgba(255, 255, 255, 0.623) !important;
+
+
+.li-link a {
+  color: rgba(255, 255, 255, 0.623) !important;
   text-decoration: none;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 13px;
 }
-.thumbnail-img{
+
+.thumbnail-img {
   transition: transform .2s;
 }
-.thumbnail-img:hover{
-    transform: scale(1.5); 
+
+.thumbnail-img:hover {
+  transform: scale(1.5);
 }
-.thumbnail-p{
+
+.thumbnail-p {
   color: black !important;
   font-size: 1.4rem !important;
 }
-.text-15 , .text-15 li {
+
+.text-15, .text-15 li {
   font-size: 1.2rem !important;
 }
-.push{
+
+.push {
   position: relative;
   top: 8rem;
 }
+
 .bg-grey {
   background-color: #f6f6f6;
 }
-#gold{
+
+#gold {
   color: #ffffff !important;
 }
-.heading{
+
+.heading {
   color: #fff !important;
   font-size: 12px;
   font-weight: bold;
 }
+
 .strong-900 {
   font-size: 40px;
-    font-weight: 600 !important;
+  font-weight: 600 !important;
 }
-.control-label{
+
+.control-label {
   font-size: 13px;
   padding-top: 0px;
 }
-@media(max-width:800px){
-  
+
+.vision {
+  position: relative;
+  border-radius: 5px 5px 5px 5px;
+  -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+}
+
+.vision img {
+  width: 100%;
+  border: 1px solid #8a4419;
+  border-style: inset;
+}
+
+.vision-p {
+  font-family: 'Dosis', sans-serif;
+}
+
+.mission {
+  position: relative;
+  border-radius: 5px 5px 5px 5px;
+  -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+}
+
+.mission img {
+  width: 100%;
+  border: 1px solid #8a4419;
+  border-style: inset;
+}
+
+@media(max-width:800px) {
   h2 {
     font-size: 24px;
     text-transform: uppercase;
@@ -151,17 +232,23 @@ footer{
     height: 90vh;
     background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('hand.jpg');
   }
-  .first h2{
+  .first h2 {
     visibility: hidden;
   }
-  .first ul{
+  .first ul {
     visibility: hidden;
   }
   .first-about {
     height: 90vh;
-}
-.push{
-  position: relative;
-  top: .1rem;
-}
+  }
+  .push {
+    position: relative;
+    top: .1rem;
+  }
+  .vision {
+    width: 250px;
+  }
+  .mission {
+    width: 250px;
+  }
 }
