--- a/css/theme.css
+++ b/css/theme.css
@@ -223,7 +223,10 @@ footer {
   border: 1px solid #8a4419;
   border-style: inset;
 }
-
+button:hover{
+background-color: #292929;
+color: #fff;
+}
 @media(max-width:800px) {
   h2 {
     font-size: 24px;
