--- a/css/theme.css
+++ b/css/theme.css
@@ -3,8 +3,8 @@ html, body {
 }
 
 h2 {
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 30px;
+  font-weight: 500;
   text-transform: uppercase;
   color: #393185;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -12,27 +12,24 @@ h2 {
 }
 
 h3 {
-  color:#393185 !important;
+  color: #393185 !important;
   font-weight: 400;
   font-size: 40px;
 }
 
 h4 {
   color: #393185 !important;
-  font-size: 27px;
-  font-weight: 550;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+hr {
+  background-color: #fff !important;
+  margin-right: 20%;
 }
 
 .container-fluid {
   padding: 60px 50px;
-}
-
-.carousel {
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, 1);
-}
-.carousel-inner img {
-  width: 100%;
-  height: 500px;
 }
 
 .nav-color {
@@ -59,7 +56,7 @@ h4 {
 }
 
 .bg-dark.scrolled {
-  background-color: #393185 !important;
+  background-color: #232f3e !important;
 }
 
 .first {
@@ -128,7 +125,7 @@ h4 {
 }
 
 .nav-lin {
-  color: #393185 !important;
+  color: #232f3e !important;
 }
 
 .navbar-brand img {
@@ -141,7 +138,7 @@ h4 {
 }
 
 footer {
-  background-color: #393185;
+  background-color: #232f3e;
   color: #fff !important;
 }
 
@@ -183,7 +180,7 @@ footer {
 }
 
 #gold {
-  color:#ef7f1a  !important;
+  color: #ef7f1a !important;
 }
 
 .heading {
@@ -233,18 +230,22 @@ footer {
   border: 1px solid #8a4419;
   border-style: inset;
 }
-.submit-contact{
-  background-color: #393185;
+
+.submit-contact {
+  background-color: #232f3e;
   color: #fff;
 }
-.submit-contact:hover{
+
+.submit-contact:hover {
   background-color: #ef7f1a;
-  color:#393185 ;
+  color: #232f3e;
 }
+
 .submit:hover {
   background-color: #ef7f1a;
-  color:#393185 ;
+  color: #232f3e;
 }
+
 #str {
   display: flex;
   justify-content: center;
@@ -253,9 +254,11 @@ footer {
   font-family: Georgia, 'Times New Roman', Times, serif;
   color: #000;
 }
+
 .slideanim {
   visibility: hidden;
 }
+
 .slide {
   animation-name: slide;
   -webkit-animation-name: slide;
@@ -267,7 +270,7 @@ footer {
 @keyframes slide {
   10% {
     opacity: 0;
-    transform: translateX(70%);
+    transform: translateY(70%);
   }
   100% {
     opacity: 1;
@@ -278,7 +281,7 @@ footer {
 @-webkit-keyframes slide {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(70%);
+    -webkit-transform: translateY(70%);
   }
   100% {
     opacity: 1;
@@ -286,12 +289,13 @@ footer {
   }
 }
 
-@media(max-width:800px) {
+@media(max-width:766px) {
   h2 {
-    font-size: 24px;
+    font-size: 30px;
+    font-weight: 500;
     text-transform: uppercase;
-    color: #303030;
-    font-weight: 600;
+    color: #393185;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-bottom: 30px;
   }
   .first {
@@ -317,8 +321,12 @@ footer {
   .mission {
     width: 250px;
   }
-  .carousel-inner img {
-    width: 100%;
-    height: 300px;
+  footer img{
+    width: 180px;
+  }
+}
+@media(min-width:768px){
+  footer img{
+    width: 180px;
   }
 }
