--- a/css/theme.css
+++ b/css/theme.css
@@ -113,13 +113,13 @@ img {
     top: 0;
     transform: none;
     -webkit-transform: none;
-    padding: 0 20%;
+    padding-top: 15%;
   }
 }
 
 @media all and (max-width: 766px) {
   .image-square>.content {
-    padding: 0 15px;
+    padding-top: 25%;
   }
 }
 
@@ -141,7 +141,7 @@ input[type="text"], select, button, textarea {
 }
 
 input[type="text"] {
-  background: #f5f5f5;
+  background: #ffffff;
   border: none;
   width: 100%;
   height: 50px;
@@ -151,10 +151,14 @@ input[type="text"] {
   border-radius: 0;
 }
 
+input[type='text']:focus {
+  border: 1px solid #ccc;
+}
+
 textarea {
   width: 100%;
   border: none;
-  background: #f5f5f5;
+  background: #ffffff;
   margin-bottom: 24px;
   border-radius: 0;
   padding: 16px 20px;
@@ -229,7 +233,7 @@ button[type="submit"] {
 
 select {
   height: 50px;
-  background: #f5f5f5;
+  background: #ffffff;
   width: 100%;
   border-radius: 0;
   border: none;
@@ -623,7 +627,7 @@ h4.uppercase {
 
 hr {
   border: none;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #fff;
   margin: 0 0 24px 0;
   margin-right: 20%;
 }
